task5/tests/TestMaster/output/amir_test43.out
lli: TestMaster/output/amir_test43.ll:1:1: error: expected top-level entity
line 3: type mismatch
^
